# FruitNeRF

./: .gitattributes  .gitignore  README.md  pyproject.toml
clustering/: 00_fuji_clustering.py  01_clustering_apple.py  02_clustering_pear.py  03_clustering_plum.py  05_clustering_lemon.py  07_clustering_peach.py  08_clustering_mango.py  apple_template.ply  clustering_base.py  config_real.py  config_synthetic.py  lemon_template.ply  peach_template.ply  pear_template.ply  run_clustering.py  run_clustering_sweep.py
debug/: export.py  process_data.py  render.py  train.py
fruit_nerf/: fruit_field.py  fruit_nerf.py  fruit_nerf_config.py  fruit_nerf_dataset.py  fruit_nerf_dataset_backup.py  fruit_pipeline.py
fruit_nerf/components/: field_heads.py  ray_generators.py  ray_samplers.py
fruit_nerf/data/: fruit_datamanager.py  fruit_dataset.py  fruitnerf_dataparser.py
fruit_nerf/export/: exporter_utils.py
fruit_nerf/scripts/: exporter.py  process_data.py
