[project]
name = "fruit_nerf"
version = "0.0.1"

dependencies=[
    "open3d",
    "numpy",
    "tqdm",
    "rawpy",
    "nerfstudio==0.3.2",
    "supervision==0.18",
    "timm==0.9.2"
]

[tool.setuptools.packages.find]
include = ["fruit_nerf*"]

[project.entry-points.'nerfstudio.method_configs']
fruit_nerf = 'fruit_nerf.fruit_nerf_config:fruit_nerf_method'
fruit_nerf_big = 'fruit_nerf.fruit_nerf_config:fruit_nerf_method_big'
fruit_nerf_huge = 'fruit_nerf.fruit_nerf_config:fruit_nerf_method_huge'

[project.scripts]
# Note, add entrypoint name to nerfstudio/scripts/completions/install.py to include CLI completion
ns-export-semantics = "fruit_nerf.scripts.exporter:entrypoint"
ns-process-fruit-data = "fruit_nerf.scripts.process_data:entrypoint"
